--- a/root/galeria.html
+++ b/root/galeria.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="images/logo icon.png" />
+    <link rel="icon" href="images/logoIcon.png" />
     <title>TeknoSun</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -18,7 +18,7 @@
     <!-- inicio header -->
     <header class="header">
       <!-- inicio nav -->
-      <nav class="nav">
+      <nav class="nav flex-row">
         <a class="nav__img-link" href="index.html">
           <img
             class="nav__img"
@@ -26,7 +26,7 @@
             alt="logo"
           />
         </a>
-        <ul class="nav__list">
+        <ul class="nav__list flex-row">
           <li class="nav__item">
             <a class="nav__item-link gradient" href="index.html">Inicio</a>
           </li>
@@ -50,22 +50,36 @@
     </header>
     <!-- fin header -->
     <!-- inicio galeria container -->
-    <section class="galeria container">
+    <section class="galeria container flex-column">
       <h1 class="galeria__title gradient">Trabajos</h1>
-      <img class="galeria__img" src="images/Gallery1.JPG" alt="imagen 1" />
-      <img class="galeria__img" src="images/Gallery2.JPG" alt="imagen 2" />
-      <img class="galeria__img" src="images/Gallery3.JPG" alt="imagen 3" />
-      <img class="galeria__img" src="images/Gallery4.JPG" alt="imagen 4" />
-      <img class="galeria__img" src="images/Gallery5.JPG" alt="imagen 5" />
-      <img class="galeria__img" src="images/Gallery6.JPG" alt="imagen 6" />
-      <img class="galeria__img" src="images/Gallery7.JPG" alt="imagen 7" />
-      <img class="galeria__img" src="images/Gallery8.JPG" alt="imagen 8" />
+      <div class="galeria__container flex-row">
+        <img class="galeria__img" src="images/Gallery1.JPG" alt="imagen 1" />
+        <img class="galeria__img" src="images/Gallery2.JPG" alt="imagen 2" />
+        <img class="galeria__img" src="images/Gallery3.JPG" alt="imagen 3" />
+        <img class="galeria__img" src="images/Gallery4.JPG" alt="imagen 4" />
+        <img class="galeria__img" src="images/Gallery5.JPG" alt="imagen 5" />
+        <img class="galeria__img" src="images/Gallery6.JPG" alt="imagen 6" />
+        <img class="galeria__img" src="images/Gallery7.JPG" alt="imagen 7" />
+        <img class="galeria__img" src="images/Gallery8.JPG" alt="imagen 8" />
+        <img class="galeria__img" src="images/Gallery9.jpeg" alt="imagen 9" />
+        <img class="galeria__img" src="images/Gallery10.jpeg" alt="imagen 10" />
+        <img class="galeria__img" src="images/Gallery11.jpeg" alt="imagen 11" />
+        <img class="galeria__img" src="images/Gallery12.jpeg" alt="imagen 12" />
+        <img class="galeria__img" src="images/Gallery13.jpeg" alt="imagen 13" />
+        <img class="galeria__img" src="images/Gallery14.jpeg" alt="imagen 14" />
+        <img class="galeria__img" src="images/Gallery15.jpeg" alt="imagen 15" />
+        <img class="galeria__img" src="images/Gallery16.jpeg" alt="imagen 16" />
+        <img class="galeria__img" src="images/Gallery17.jpeg" alt="imagen 17" />
+        <img class="galeria__img" src="images/Gallery18.jpeg" alt="imagen 18" />
+        <img class="galeria__img" src="images/Gallery19.jpeg" alt="imagen 19" />
+        <img class="galeria__img" src="images/Gallery20.jpeg" alt="imagen 20" />
+      </div>
     </section>
     <!-- fin galeria container -->
     <!-- inicio footer -->
-    <footer class="footer">
+    <footer class="footer flex-row">
       <p class="footer__text gradient">copyright</p>
-      <p class="footer__text footer__text--right gradient">Gabriel Ramírez</p>
+      <p class="footer__text gradient">Gabriel Ramírez</p>
     </footer>
     <!-- fin footer  -->
   </body>
