--- a/root/nosotros.html
+++ b/root/nosotros.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="images/logo icon.png" />
+    <link rel="icon" href="images/logoIcon.png" />
     <title>TeknoSun</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -18,7 +18,7 @@
     <!-- inicio header -->
     <header class="header">
       <!-- inicio nav -->
-      <nav class="nav">
+      <nav class="nav flex-row">
         <a class="nav__img-link" href="index.html">
           <img
             class="nav__img"
@@ -26,7 +26,7 @@
             alt="logo"
           />
         </a>
-        <ul class="nav__list">
+        <ul class="nav__list flex-row">
           <li class="nav__item">
             <a class="nav__item-link gradient" href="index.html">Inicio</a>
           </li>
@@ -50,7 +50,7 @@
     </header>
     <!-- fin header -->
     <!-- inicio nosotros container -->
-    <section class="nosotros container">
+    <section class="nosotros container flex-column">
       <h1 class="nosotros__title gradient">Quienes Somos</h1>
       <article class="nosotros__item">
         <h2 class="nosotros__subtitle gradient">Nuestra Filosofía</h2>
@@ -108,9 +108,9 @@
     </section>
     <!-- fin nosotros container -->
     <!-- inicio footer -->
-    <footer class="footer">
+    <footer class="footer flex-row">
       <p class="footer__text gradient">copyright</p>
-      <p class="footer__text footer__text--right gradient">Gabriel Ramírez</p>
+      <p class="footer__text gradient">Gabriel Ramírez</p>
     </footer>
     <!-- fin footer  -->
   </body>
