--- a/root/servicios.html
+++ b/root/servicios.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="images/logo icon.png" />
+    <link rel="icon" href="images/logoIcon.png" />
     <title>TeknoSun</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -18,7 +18,7 @@
     <!-- inicio header -->
     <header class="header">
       <!-- inicio nav -->
-      <nav class="nav">
+      <nav class="nav flex-row">
         <a class="nav__img-link" href="index.html">
           <img
             class="nav__img"
@@ -26,7 +26,7 @@
             alt="logo"
           />
         </a>
-        <ul class="nav__list">
+        <ul class="nav__list flex-row">
           <li class="nav__item">
             <a class="nav__item-link gradient" href="index.html">Inicio</a>
           </li>
@@ -50,7 +50,7 @@
     </header>
     <!-- fin header -->
     <!-- inicio servicios container -->
-    <section class="servicios container">
+    <section class="servicios container flex-column">
       <!-- inicio titulo -->
       <h1 class="servicios__title gradient">Servicios</h1>
       <!-- fin titulo -->
@@ -59,20 +59,10 @@
           Mantención de maquinarias
         </summary>
         <p class="servicios__text">
-          El Lorem Ipsum fue concebido como un texto de relleno, formateado de
-          una cierta manera para permitir la presentación de elementos gráficos
-          en documentos, sin necesidad de una copia formal. El Lorem Ipsum fue
-          concebido como un texto de relleno, formateado de una cierta manera
-          para permitir la presentación de elementos gráficos en documentos, sin
-          necesidad de una copia formal. El Lorem Ipsum fue concebido como un
-          texto de relleno, formateado de una cierta manera para permitir la
-          presentación de elementos gráficos en documentos, sin necesidad de una
-          copia formal. El Lorem Ipsum fue concebido como un texto de relleno,
-          formateado de una cierta manera para permitir la presentación de
-          elementos gráficos en documentos, sin necesidad de una copia formal.
-          El Lorem Ipsum fue concebido como un texto de relleno, formateado de
-          una cierta manera para permitir la presentación de elementos gráficos
-          en documentos, sin necesidad de una copia formal.
+          Revisamos periódicamente las máquinas de acuerdo a instrucciones
+          establecidas formalmente por el fabricante. Consiste en efectuar
+          reparaciones no programadas a las máquinas, surgidas por fallas
+          imprevistas con motivo de la operación diaria de la misma.
         </p>
       </details>
       <details class="servicios__item">
@@ -80,20 +70,11 @@
           Mantenimiento predictivo
         </summary>
         <p class="servicios__text">
-          El Lorem Ipsum fue concebido como un texto de relleno, formateado de
-          una cierta manera para permitir la presentación de elementos gráficos
-          en documentos, sin necesidad de una copia formal. El Lorem Ipsum fue
-          concebido como un texto de relleno, formateado de una cierta manera
-          para permitir la presentación de elementos gráficos en documentos, sin
-          necesidad de una copia formal. El Lorem Ipsum fue concebido como un
-          texto de relleno, formateado de una cierta manera para permitir la
-          presentación de elementos gráficos en documentos, sin necesidad de una
-          copia formal. El Lorem Ipsum fue concebido como un texto de relleno,
-          formateado de una cierta manera para permitir la presentación de
-          elementos gráficos en documentos, sin necesidad de una copia formal.
-          El Lorem Ipsum fue concebido como un texto de relleno, formateado de
-          una cierta manera para permitir la presentación de elementos gráficos
-          en documentos, sin necesidad de una copia formal.
+          Si una máquina falla, las repercusiones negativas tanto a nivel
+          servicio como a nivel financiero para una empresa pueden ser enormes.
+          Por ello, ofrecemos este servicio de mantenimiento predictivo que
+          consiste de una serie de acciones y técnicas que se aplican en la
+          maquina para anticiparnos a los posibles errores en un futuro.
         </p>
       </details>
       <details class="servicios__item">
@@ -101,20 +82,10 @@
           Proyectos eléctricos y mecánicos
         </summary>
         <p class="servicios__text">
-          El Lorem Ipsum fue concebido como un texto de relleno, formateado de
-          una cierta manera para permitir la presentación de elementos gráficos
-          en documentos, sin necesidad de una copia formal. El Lorem Ipsum fue
-          concebido como un texto de relleno, formateado de una cierta manera
-          para permitir la presentación de elementos gráficos en documentos, sin
-          necesidad de una copia formal. El Lorem Ipsum fue concebido como un
-          texto de relleno, formateado de una cierta manera para permitir la
-          presentación de elementos gráficos en documentos, sin necesidad de una
-          copia formal. El Lorem Ipsum fue concebido como un texto de relleno,
-          formateado de una cierta manera para permitir la presentación de
-          elementos gráficos en documentos, sin necesidad de una copia formal.
-          El Lorem Ipsum fue concebido como un texto de relleno, formateado de
-          una cierta manera para permitir la presentación de elementos gráficos
-          en documentos, sin necesidad de una copia formal.
+          Somos especialistas en la realización de proyectos eléctricos y
+          mecánicos en los cuales aplicamos las mejores practicas a seguir en
+          cada etapa del diseño y construcción de la maquinaria para entregarle
+          al cliente una solución a medida de la mejor calidad.
         </p>
       </details>
       <details class="servicios__item">
@@ -122,20 +93,10 @@
           Reparación de máquinas y equipos
         </summary>
         <p class="servicios__text">
-          El Lorem Ipsum fue concebido como un texto de relleno, formateado de
-          una cierta manera para permitir la presentación de elementos gráficos
-          en documentos, sin necesidad de una copia formal. El Lorem Ipsum fue
-          concebido como un texto de relleno, formateado de una cierta manera
-          para permitir la presentación de elementos gráficos en documentos, sin
-          necesidad de una copia formal. El Lorem Ipsum fue concebido como un
-          texto de relleno, formateado de una cierta manera para permitir la
-          presentación de elementos gráficos en documentos, sin necesidad de una
-          copia formal. El Lorem Ipsum fue concebido como un texto de relleno,
-          formateado de una cierta manera para permitir la presentación de
-          elementos gráficos en documentos, sin necesidad de una copia formal.
-          El Lorem Ipsum fue concebido como un texto de relleno, formateado de
-          una cierta manera para permitir la presentación de elementos gráficos
-          en documentos, sin necesidad de una copia formal.
+          Nos encargamos de la reparación de cualquier daño o error que pueda
+          tener la maquina o equipo a reparar, asi como también asegurarnos de
+          darle un mantenimiento general para prevenir futuras fallas en el
+          mismo.
         </p>
       </details>
       <details class="servicios__item">
@@ -143,20 +104,11 @@
           Fabricación de partes y piezas
         </summary>
         <p class="servicios__text">
-          El Lorem Ipsum fue concebido como un texto de relleno, formateado de
-          una cierta manera para permitir la presentación de elementos gráficos
-          en documentos, sin necesidad de una copia formal. El Lorem Ipsum fue
-          concebido como un texto de relleno, formateado de una cierta manera
-          para permitir la presentación de elementos gráficos en documentos, sin
-          necesidad de una copia formal. El Lorem Ipsum fue concebido como un
-          texto de relleno, formateado de una cierta manera para permitir la
-          presentación de elementos gráficos en documentos, sin necesidad de una
-          copia formal. El Lorem Ipsum fue concebido como un texto de relleno,
-          formateado de una cierta manera para permitir la presentación de
-          elementos gráficos en documentos, sin necesidad de una copia formal.
-          El Lorem Ipsum fue concebido como un texto de relleno, formateado de
-          una cierta manera para permitir la presentación de elementos gráficos
-          en documentos, sin necesidad de una copia formal.
+          Muchos repuestos para las maquinas suelen tener que ser importados
+          desde el exterior lo que implica un gasto extra para su reparación,
+          por lo que también nos especializamos en la fabricación de los mismos
+          para ofrecerle al cliente el mismo producto incluso con mejoras y en
+          poco tiempo.
         </p>
       </details>
       <details class="servicios__item">
@@ -164,28 +116,19 @@
           TeknoSun se adapta a los nuevos tiempos
         </summary>
         <p class="servicios__text">
-          El Lorem Ipsum fue concebido como un texto de relleno, formateado de
-          una cierta manera para permitir la presentación de elementos gráficos
-          en documentos, sin necesidad de una copia formal. El Lorem Ipsum fue
-          concebido como un texto de relleno, formateado de una cierta manera
-          para permitir la presentación de elementos gráficos en documentos, sin
-          necesidad de una copia formal. El Lorem Ipsum fue concebido como un
-          texto de relleno, formateado de una cierta manera para permitir la
-          presentación de elementos gráficos en documentos, sin necesidad de una
-          copia formal. El Lorem Ipsum fue concebido como un texto de relleno,
-          formateado de una cierta manera para permitir la presentación de
-          elementos gráficos en documentos, sin necesidad de una copia formal.
-          El Lorem Ipsum fue concebido como un texto de relleno, formateado de
-          una cierta manera para permitir la presentación de elementos gráficos
-          en documentos, sin necesidad de una copia formal.
+          En estos tiempos dificiles por los que estamos pasando actualmente
+          TeknoSun ha evolucionado y encontrado nuevas formas de trabajo
+          cumpliendo con todos los protocolos de seguridad y sanitarios para
+          tener el control de prestar el servicio de un modo seguro y eficaz a
+          su vez.
         </p>
       </details>
     </section>
     <!-- fin servicio container -->
     <!-- inicio footer -->
-    <footer class="footer">
+    <footer class="footer flex-row">
       <p class="footer__text gradient">copyright</p>
-      <p class="footer__text footer__text--right gradient">Gabriel Ramírez</p>
+      <p class="footer__text gradient">Gabriel Ramírez</p>
     </footer>
     <!-- fin footer  -->
   </body>
