--- a/root/index.html
+++ b/root/index.html
@@ -18,7 +18,7 @@
     <!-- inicio header -->
     <header class="header">
       <!-- inicio nav -->
-      <nav class="nav">
+      <nav class="nav flex-row">
         <a class="nav__img-link" href="index.html">
           <img
             class="nav__img"
@@ -26,7 +26,7 @@
             alt="logo"
           />
         </a>
-        <ul class="nav__list">
+        <ul class="nav__list flex-row">
           <li class="nav__item">
             <a class="nav__item-link gradient" href="index.html">Inicio</a>
           </li>
@@ -51,16 +51,16 @@
     <!-- fin header -->
     <main>
       <!-- inicio sección inicio -->
-      <section class="inicio container">
+      <section class="inicio container flex-column">
         <img class="inicio__img" src="images/logo_transparentNewColors.png" alt="logoHero">
         <h1 class="inicio__title gradient">Mantención y Servicios Industriales</h1>
         <a class="button" href="contacto.html">Contactanos</a>
       </section>
       <!-- fin sección inicio -->
       <!-- inicio sección nosotros y servicios -->
-      <section class="info">
+      <section class="info flex-row">
       <!-- inicio sección nosotros  -->
-      <div class="nosotros container">
+      <div class="nosotros container flex-column">
         <h2 class="nosotros__subtitle gradient">Nuestro Objetivo</h2>
         <p class="nosotros__text">
           Convertirse en un aliado estratégico alineado con el cliente en la
@@ -74,9 +74,9 @@
       </div>
       <!-- fin sección nosotros  -->
       <!-- inicio sección servicios -->
-      <div class="servicios container">
+      <div class="servicios container flex-column">
           <h2 class="servicios__subtitle gradient">Principales Servicios</h2>
-          <div class="servicios__items">
+          <div class="servicios__items flex-column">
             <p class="servicios__item-text">Mantenimiento predictivo</p>
             <p class="servicios__item-text">Mantención de maquinaria</p>
             <p class="servicios__item-text">Reparación de máquinas y equipos</p>
@@ -89,8 +89,8 @@
       <!-- inicio sección contacto -->
       <section class="contacto container">
         <h2 class="contacto__subtitle gradient">Comunicate con nosotros</h2>
-        <div class="contacto__container">
-          <form class="contacto__form" action="post">
+        <div class="contacto__container flex-row">
+          <form class="contacto__form flex-column" action="post">
             <input class="contacto__input" type="text" placeholder="Nombre" name="Nombre" />
             <br />
             <input class="contacto__input" type="email" placeholder="Email" name="Email"/>
@@ -99,7 +99,7 @@
             <br />
             <input class="contacto__button" type="submit" value="Contactanos" />
           </form>
-          <article class="contacto__article">
+          <article class="contacto__article flex-column">
             <div class="contacto__redes">
               <h3 class="contacto__h3 gradient">Nuestras redes:</h3>
               <!-- <p class="contacto__text" >Siguenos en nuestras redes para ver a detalle nuestro trabajo</p> -->
@@ -128,9 +128,9 @@
       <!-- fin sección contacto -->
     </main>
     <!-- inicio footer -->
-    <footer class="footer">
+    <footer class="footer flex-row">
       <p class="footer__text gradient" >copyright</p>
-      <p class="footer__text footer__text--right gradient">Gabriel Ramírez</p>
+      <p class="footer__text gradient">Gabriel Ramírez</p>
     </footer>
     <!-- fin footer  -->
   </body>
