--- a/root/index.html
+++ b/root/index.html
@@ -15,123 +15,119 @@
     />
   </head>
   <body>
-    <!-- inicio header -->
-    <header class="header">
-      <!-- inicio nav -->
-      <nav class="nav flex-row">
-        <a class="nav__img-link" href="index.html">
-          <img
-            class="nav__img"
-            src="images/logo_transparentNewColors.png"
-            alt="logo"
-          />
-        </a>
-        <ul class="nav__list flex-row">
-          <li class="nav__item">
-            <a class="nav__item-link gradient" href="index.html">Inicio</a>
-          </li>
-          <li class="nav__item">
-            <a class="nav__item-link gradient" href="servicios.html">
-              Servicios
-            </a>
-          </li>
-          <li class="nav__item">
-            <a class="nav__item-link gradient" href="galeria.html">Galeria</a>
-          </li>
-          <li class="nav__item">
-            <a class="nav__item-link gradient" href="nosotros.html">Nosotros</a>
-          </li>
-          <li class="nav__item">
-            <a class="nav__item-link gradient" href="contacto.html">Contacto</a>
-          </li>
-        </ul>
-      </nav>
-      <!-- fin nav -->
-    </header>
-    <!-- fin header -->
-    <main>
-      <!-- inicio sección inicio -->
-      <section class="inicio container flex-column">
-        <img class="inicio__img" src="images/logo_transparentNewColors.png" alt="logoHero">
-        <h1 class="inicio__title gradient">Mantención y Servicios Industriales</h1>
-        <a class="button" href="contacto.html">Contactanos</a>
-      </section>
-      <!-- fin sección inicio -->
-      <!-- inicio sección nosotros y servicios -->
-      <section class="info flex-row">
-      <!-- inicio sección nosotros  -->
-      <div class="nosotros container flex-column">
-        <h2 class="nosotros__subtitle gradient">Nuestro Objetivo</h2>
-        <p class="nosotros__text">
-          Convertirse en un aliado estratégico alineado con el cliente en la
-          dirección del negocio, con el afán de satisfacer con excelencia, las
-          necesidades del mercado en el campo de la Mantención Industrial y
-          mantención eléctrica más Fabricación de repuestos sea cualquiera de sus
-          requerimientos. Proporcionar un servicio integral, de alta calidad
-          adaptado a sus necesidades y a costos competitivos.
-        </p>
-        <a class="button" href="contacto.html">Conocenos mas</a>
-      </div>
-      <!-- fin sección nosotros  -->
-      <!-- inicio sección servicios -->
-      <div class="servicios container flex-column">
-          <h2 class="servicios__subtitle gradient">Principales Servicios</h2>
-          <div class="servicios__items flex-column">
-            <p class="servicios__item-text">Mantenimiento predictivo</p>
-            <p class="servicios__item-text">Mantención de maquinaria</p>
-            <p class="servicios__item-text">Reparación de máquinas y equipos</p>
-          </div>
-          <a class="button" href="servicios.html">Todos los servicios</a>
-      </div>
-      <!-- fin sección servicios -->
-    </section>
-      <!-- fin sección nosotros y servicios -->
-      <!-- inicio sección contacto -->
-      <section class="contacto container">
-        <h2 class="contacto__subtitle gradient">Comunicate con nosotros</h2>
-        <div class="contacto__container flex-row">
-          <form class="contacto__form flex-column" action="post">
-            <input class="contacto__input" type="text" placeholder="Nombre" name="Nombre" />
-            <br />
-            <input class="contacto__input" type="email" placeholder="Email" name="Email"/>
-            <br />
-            <textarea class="contacto__textarea" type="text" placeholder="Mensaje" value="Mensaje" name="Mensaje"/></textarea>
-            <br />
-            <input class="contacto__button" type="submit" value="Contactanos" />
-          </form>
-          <article class="contacto__article flex-column">
-            <div class="contacto__redes">
-              <h3 class="contacto__h3 gradient">Nuestras redes:</h3>
-              <!-- <p class="contacto__text" >Siguenos en nuestras redes para ver a detalle nuestro trabajo</p> -->
-              <div class="contacto__links">
-              <a class="contacto__link" href="https://www.instagram.com/teknosun_spa/"><img class="contacto__icon" src="images/instagram.png" alt="instagram icon" /></a>
-              <a class="contacto__link" href="https://www.facebook.com/teknosun.teknosun"><img class="contacto__icon" src="images/facebook.png" alt="instagram icon" /></a>
+    <div class="index grid-container">
+      <!-- inicio header -->
+      <header class="header">
+        <!-- inicio nav -->
+        <nav class="nav flex-row">
+          <a class="nav__img-link" href="index.html">
+            <img
+              class="nav__img"
+              src="images/logo_transparentNewColors.png"
+              alt="logo"
+            />
+          </a>
+          <ul class="nav__list flex-row">
+            <li class="nav__item">
+              <a class="nav__item-link gradient" href="index.html">Inicio</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__item-link gradient" href="servicios.html">
+                Servicios
+              </a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__item-link gradient" href="galeria.html">Galeria</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__item-link gradient" href="nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__item-link gradient" href="contacto.html">Contacto</a>
+            </li>
+          </ul>
+        </nav>
+        <!-- fin nav -->
+      </header>
+      <!-- fin header -->
+        <!-- inicio sección inicio -->
+        <section class="inicio container flex-column">
+          <img class="inicio__img" src="images/logo_transparentNewColors.png" alt="logoHero">
+          <h1 class="inicio__title gradient">Mantención y Servicios Industriales</h1>
+          <a class="button" href="contacto.html">Contactanos</a>
+        </section>
+        <!-- fin sección inicio -->
+        <!-- inicio sección nosotros  -->
+        <section class="nosotros container flex-column">
+          <h2 class="nosotros__subtitle gradient">Nuestro Objetivo</h2>
+          <p class="nosotros__text">
+            Convertirse en un aliado estratégico alineado con el cliente en la
+            dirección del negocio, con el afán de satisfacer con excelencia, las
+            necesidades del mercado en el campo de la Mantención Industrial y
+            mantención eléctrica más Fabricación de repuestos sea cualquiera de sus
+            requerimientos. Proporcionar un servicio integral, de alta calidad
+            adaptado a sus necesidades y a costos competitivos.
+          </p>
+          <a class="button" href="contacto.html">Conocenos mas</a>
+        </section>
+        <!-- fin sección nosotros  -->
+        <!-- inicio sección servicios -->
+        <section class="servicios container flex-column">
+            <h2 class="servicios__subtitle gradient">Principales Servicios</h2>
+            <div class="servicios__items flex-column">
+              <p class="servicios__item-text">Mantenimiento predictivo</p>
+              <p class="servicios__item-text">Mantención de maquinaria</p>
+              <p class="servicios__item-text">Reparación de máquinas y equipos</p>
+            </div>
+            <a class="button" href="servicios.html">Todos los servicios</a>
+          </section>
+        <!-- fin sección servicios -->
+        <!-- inicio sección contacto -->
+        <section class="contacto container">
+          <h2 class="contacto__subtitle gradient">Comunicate con nosotros</h2>
+          <div class="contacto__container flex-row">
+            <form class="contacto__form flex-column" action="post">
+              <input class="contacto__input" type="text" placeholder="Nombre" name="Nombre" />
+              <br />
+              <input class="contacto__input" type="email" placeholder="Email" name="Email"/>
+              <br />
+              <textarea class="contacto__textarea" type="text" placeholder="Mensaje" value="Mensaje" name="Mensaje"/></textarea>
+              <br />
+              <input class="contacto__button" type="submit" value="Contactanos" />
+            </form>
+            <article class="contacto__article flex-column">
+              <div class="contacto__redes">
+                <h3 class="contacto__h3 gradient">Nuestras redes:</h3>
+                <!-- <p class="contacto__text" >Siguenos en nuestras redes para ver a detalle nuestro trabajo</p> -->
+                <div class="contacto__links">
+                <a class="contacto__link" href="https://www.instagram.com/teknosun_spa/"><img class="contacto__icon" src="images/instagram.png" alt="instagram icon" /></a>
+                <a class="contacto__link" href="https://www.facebook.com/teknosun.teknosun"><img class="contacto__icon" src="images/facebook.png" alt="instagram icon" /></a>
+                </div>
               </div>
-            </div>
-            <div class="contacto__datos">
-              <h3 class="contacto__h3 gradient">Datos para contactar:</h3>
-              <p class="contacto__text" >Independencia, Santiago</p>
-              <p class="contacto__text" >comercial@teknosun.cl</p>
-              <p class="contacto__text" >+56994340066</p>
-            </div>
-            <div class="contacto__map-container">
-              <div class="contacto__gmap">
-                <iframe class="contacto__map" id="gmap_canvas" src="https://maps.google.com/maps?q=santiago&t=&z=9&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
-                </iframe>
-                <a class="contacto__map-link" href="https://123movies-a.com"></a>
-                <br>
-                <a class="contacto__map-link" href="https://www.embedgooglemap.net"></a></div>
-            </div>
-          </article>
-        </div>
-      </section>
-      <!-- fin sección contacto -->
-    </main>
-    <!-- inicio footer -->
-    <footer class="footer flex-row">
-      <p class="footer__text gradient" >copyright</p>
-      <p class="footer__text gradient">Gabriel Ramírez</p>
-    </footer>
-    <!-- fin footer  -->
+              <div class="contacto__datos">
+                <h3 class="contacto__h3 gradient">Datos para contactar:</h3>
+                <p class="contacto__text" >Independencia, Santiago</p>
+                <p class="contacto__text" >comercial@teknosun.cl</p>
+                <p class="contacto__text" >+56994340066</p>
+              </div>
+              <div class="contacto__map-container">
+                <div class="contacto__gmap">
+                  <iframe class="contacto__map" id="gmap_canvas" src="https://maps.google.com/maps?q=santiago&t=&z=9&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
+                  </iframe>
+                  <a class="contacto__map-link" href="https://123movies-a.com"></a>
+                  <br>
+                  <a class="contacto__map-link" href="https://www.embedgooglemap.net"></a></div>
+              </div>
+            </article>
+          </div>
+        </section>
+        <!-- fin sección contacto -->
+      <!-- inicio footer -->
+      <footer class="footer flex-row">
+        <p class="footer__text gradient" >copyright</p>
+        <p class="footer__text gradient">Gabriel Ramírez</p>
+      </footer>
+      <!-- fin footer  -->
+    </div>
   </body>
 </html>
