--- a/root/indexOld.html
+++ b/root/indexOld.html
@@ -15,8 +15,8 @@
     />
   </head>
   <body>
-    <div class="contactanos grid-container">
-    <!-- inicio header -->
+    <div class="index grid-container">
+      <!-- inicio header -->
       <header class="header">
         <!-- inicio nav -->
         <nav class="nav flex-row">
@@ -50,9 +50,46 @@
         <!-- fin nav -->
       </header>
       <!-- fin header -->
-      <!-- inicio formulario -->
-      <section class="contacto container">
-          <h1 class="contacto__title gradient">Comunicate con nosotros</h1>
+      <main>
+        <!-- inicio sección inicio -->
+        <section class="inicio container flex-column">
+          <img class="inicio__img" src="images/logo_transparentNewColors.png" alt="logoHero">
+          <h1 class="inicio__title gradient">Mantención y Servicios Industriales</h1>
+          <a class="button" href="contacto.html">Contactanos</a>
+        </section>
+        <!-- fin sección inicio -->
+        <!-- inicio sección nosotros y servicios -->
+        <section class="info flex-row">
+        <!-- inicio sección nosotros  -->
+        <div class="nosotros container flex-column">
+          <h2 class="nosotros__subtitle gradient">Nuestro Objetivo</h2>
+          <p class="nosotros__text">
+            Convertirse en un aliado estratégico alineado con el cliente en la
+            dirección del negocio, con el afán de satisfacer con excelencia, las
+            necesidades del mercado en el campo de la Mantención Industrial y
+            mantención eléctrica más Fabricación de repuestos sea cualquiera de sus
+            requerimientos. Proporcionar un servicio integral, de alta calidad
+            adaptado a sus necesidades y a costos competitivos.
+          </p>
+          <a class="button" href="contacto.html">Conocenos mas</a>
+        </div>
+        <!-- fin sección nosotros  -->
+        <!-- inicio sección servicios -->
+        <div class="servicios container flex-column">
+            <h2 class="servicios__subtitle gradient">Principales Servicios</h2>
+            <div class="servicios__items flex-column">
+              <p class="servicios__item-text">Mantenimiento predictivo</p>
+              <p class="servicios__item-text">Mantención de maquinaria</p>
+              <p class="servicios__item-text">Reparación de máquinas y equipos</p>
+            </div>
+            <a class="button" href="servicios.html">Todos los servicios</a>
+        </div>
+        <!-- fin sección servicios -->
+      </section>
+        <!-- fin sección nosotros y servicios -->
+        <!-- inicio sección contacto -->
+        <section class="contacto container">
+          <h2 class="contacto__subtitle gradient">Comunicate con nosotros</h2>
           <div class="contacto__container flex-row">
             <form class="contacto__form flex-column" action="post">
               <input class="contacto__input" type="text" placeholder="Nombre" name="Nombre" />
@@ -88,8 +125,9 @@
               </div>
             </article>
           </div>
-      </section>
-      <!-- fin sección contacto -->
+        </section>
+        <!-- fin sección contacto -->
+      </main>
       <!-- inicio footer -->
       <footer class="footer flex-row">
         <p class="footer__text gradient" >copyright</p>
