--- a/root/nosotros.html
+++ b/root/nosotros.html
@@ -15,103 +15,113 @@
     />
   </head>
   <body>
-    <!-- inicio header -->
-    <header class="header">
-      <!-- inicio nav -->
-      <nav class="nav flex-row">
-        <a class="nav__img-link" href="index.html">
-          <img
-            class="nav__img"
-            src="images/logo_transparentNewColors.png"
-            alt="logo"
-          />
-        </a>
-        <ul class="nav__list flex-row">
-          <li class="nav__item">
-            <a class="nav__item-link gradient" href="index.html">Inicio</a>
-          </li>
-          <li class="nav__item">
-            <a class="nav__item-link gradient" href="servicios.html">
-              Servicios
-            </a>
-          </li>
-          <li class="nav__item">
-            <a class="nav__item-link gradient" href="galeria.html">Galeria</a>
-          </li>
-          <li class="nav__item">
-            <a class="nav__item-link gradient" href="nosotros.html">Nosotros</a>
-          </li>
-          <li class="nav__item">
-            <a class="nav__item-link gradient" href="contacto.html">Contacto</a>
-          </li>
-        </ul>
-      </nav>
-      <!-- fin nav -->
-    </header>
-    <!-- fin header -->
-    <!-- inicio nosotros container -->
-    <section class="nosotros container flex-column">
-      <h1 class="nosotros__title gradient">Quienes Somos</h1>
-      <article class="nosotros__item">
-        <h2 class="nosotros__subtitle gradient">Nuestra Filosofía</h2>
-        <p class="nosotros__text">
-          El servicio ofrecido se sustenta en el desarrollo de las actividades
-          donde se privilegia el concepto de trabajo CASS :
-        </p>
-        <p class="nosotros__text">
-          <span class="nosotros__check gradient">✓</span>
-          Trabajo de Calidad
-        </p>
-        <p class="nosotros__text">
-          <span class="nosotros__check gradient">✓</span>
-          Cuidado del Medio Ambiente
-        </p>
-        <p class="nosotros__text">
-          <span class="nosotros__check gradient">✓</span>
-          Que se realice en forma Segura
-        </p>
-        <p class="nosotros__text">
-          <span class="nosotros__check gradient">✓</span>
-          Preocupación por la Salud ocupacional del equipo humano
-        </p>
-      </article>
-      <article class="nosotros__item">
-        <h2 class="nosotros__subtitle gradient">Nuestra Misión</h2>
-        <p class="nosotros__text">
-          Entregar un servicio de excelencia basado en la calidad de sus
-          profesionales ; técnicos eléctricos y técnicos mecánicos. En la cual
-          PBS. Mantención y Servicios Industriales, tiene implementado un
-          sistema de selección basado en las competencias laborales apuntando a
-          un mejoramiento continuo de sus habilidades, lo que garantiza la
-          competitividad en el mercado.
-        </p>
-        <p class="nosotros__text">
-          <span class="nosotros__check gradient">✓</span>
-          Preocupación por la Salud ocupacional del equipo humano
-        </p>
-      </article>
-      <article class="nosotros__item">
-        <h2 class="nosotros__subtitle gradient">Nuestro Objetivo</h2>
-        <p class="nosotros__text">
-          Convertirse en un aliado estratégico alineado con el cliente en la
-          dirección del negocio, con el afán de satisfacer con excelencia, las
-          necesidades del mercado en el campo de la Mantención Industrial y
-          mantención eléctrica más Fabricación de repuestos sea cualquiera de
-          sus requerimientos.
-        </p>
-        <p class="nosotros__text">
-          <span class="nosotros__check gradient">✓</span>
-          Proporcionar un servicio integral, de alta calidad adaptado a sus
-          necesidades y a costos competitivos.
-        </p>
-      </article>
-    </section>
-    <!-- fin nosotros container -->
-    <!-- inicio footer -->
-    <footer class="footer flex-row">
-      <p class="footer__text gradient">copyright</p>
-      <p class="footer__text gradient">Gabriel Ramírez</p>
-    </footer>
-    <!-- fin footer  -->
+    <div class="nosotros grid-container">
+      <!-- inicio header -->
+      <header class="header">
+        <!-- inicio nav -->
+        <nav class="nav flex-row">
+          <a class="nav__img-link" href="index.html">
+            <img
+              class="nav__img"
+              src="images/logo_transparentNewColors.png"
+              alt="logo"
+            />
+          </a>
+          <ul class="nav__list flex-row">
+            <li class="nav__item">
+              <a class="nav__item-link gradient" href="index.html">Inicio</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__item-link gradient" href="servicios.html">
+                Servicios
+              </a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__item-link gradient" href="galeria.html">Galeria</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__item-link gradient" href="nosotros.html">
+                Nosotros
+              </a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__item-link gradient" href="contacto.html">
+                Contacto
+              </a>
+            </li>
+          </ul>
+        </nav>
+        <!-- fin nav -->
+      </header>
+      <!-- fin header -->
+      <!-- inicio nosotros container -->
+      <section class="nosotros__contenido container flex-column">
+        <h1 class="nosotros__contenido__title gradient">Quienes Somos</h1>
+        <article class="nosotros__contenido__item">
+          <h2 class="nosotros__contenido__subtitle gradient">
+            Nuestra Filosofía
+          </h2>
+          <p class="nosotros__contenido__text">
+            El servicio ofrecido se sustenta en el desarrollo de las actividades
+            donde se privilegia el concepto de trabajo CASS :
+          </p>
+          <p class="nosotros__contenido__text">
+            <span class="nosotros__contenido__check gradient">✓</span>
+            Trabajo de Calidad
+          </p>
+          <p class="nosotros__contenido__text">
+            <span class="nosotros__contenido__check gradient">✓</span>
+            Cuidado del Medio Ambiente
+          </p>
+          <p class="nosotros__contenido__text">
+            <span class="nosotros__contenido__check gradient">✓</span>
+            Que se realice en forma Segura
+          </p>
+          <p class="nosotros__contenido__text">
+            <span class="nosotros__contenido__check gradient">✓</span>
+            Preocupación por la Salud ocupacional del equipo humano
+          </p>
+        </article>
+        <article class="nosotros__contenido__item">
+          <h2 class="nosotros__contenido__subtitle gradient">Nuestra Misión</h2>
+          <p class="nosotros__contenido__text">
+            Entregar un servicio de excelencia basado en la calidad de sus
+            profesionales ; técnicos eléctricos y técnicos mecánicos. En la cual
+            PBS. Mantención y Servicios Industriales, tiene implementado un
+            sistema de selección basado en las competencias laborales apuntando
+            a un mejoramiento continuo de sus habilidades, lo que garantiza la
+            competitividad en el mercado.
+          </p>
+          <p class="nosotros__contenido__text">
+            <span class="nosotros__contenido__check gradient">✓</span>
+            Preocupación por la Salud ocupacional del equipo humano
+          </p>
+        </article>
+        <article class="nosotros__contenido__item">
+          <h2 class="nosotros__contenido__subtitle gradient">
+            Nuestro Objetivo
+          </h2>
+          <p class="nosotros__contenido__text">
+            Convertirse en un aliado estratégico alineado con el cliente en la
+            dirección del negocio, con el afán de satisfacer con excelencia, las
+            necesidades del mercado en el campo de la Mantención Industrial y
+            mantención eléctrica más Fabricación de repuestos sea cualquiera de
+            sus requerimientos.
+          </p>
+          <p class="nosotros__contenido__text">
+            <span class="nosotros__contenido__check gradient">✓</span>
+            Proporcionar un servicio integral, de alta calidad adaptado a sus
+            necesidades y a costos competitivos.
+          </p>
+        </article>
+      </section>
+      <!-- fin nosotros container -->
+      <!-- inicio footer -->
+      <footer class="footer flex-row">
+        <p class="footer__text gradient">copyright</p>
+        <p class="footer__text gradient">Gabriel Ramírez</p>
+      </footer>
+      <!-- fin footer  -->
+    </div>
   </body>
 </html>
