--- a/root/servicios.html
+++ b/root/servicios.html
@@ -15,121 +15,128 @@
     />
   </head>
   <body>
-    <!-- inicio header -->
-    <header class="header">
-      <!-- inicio nav -->
-      <nav class="nav flex-row">
-        <a class="nav__img-link" href="index.html">
-          <img
-            class="nav__img"
-            src="images/logo_transparentNewColors.png"
-            alt="logo"
-          />
-        </a>
-        <ul class="nav__list flex-row">
-          <li class="nav__item">
-            <a class="nav__item-link gradient" href="index.html">Inicio</a>
-          </li>
-          <li class="nav__item">
-            <a class="nav__item-link gradient" href="servicios.html">
-              Servicios
-            </a>
-          </li>
-          <li class="nav__item">
-            <a class="nav__item-link gradient" href="galeria.html">Galeria</a>
-          </li>
-          <li class="nav__item">
-            <a class="nav__item-link gradient" href="nosotros.html">Nosotros</a>
-          </li>
-          <li class="nav__item">
-            <a class="nav__item-link gradient" href="contacto.html">Contacto</a>
-          </li>
-        </ul>
-      </nav>
-      <!-- fin nav -->
-    </header>
-    <!-- fin header -->
-    <!-- inicio servicios container -->
-    <section class="servicios container flex-column">
-      <!-- inicio titulo -->
-      <h1 class="servicios__title gradient">Servicios</h1>
-      <!-- fin titulo -->
-      <details class="servicios__item">
-        <summary class="servicios__summary gradient gradient">
-          Mantención de maquinarias
-        </summary>
-        <p class="servicios__text">
-          Revisamos periódicamente las máquinas de acuerdo a instrucciones
-          establecidas formalmente por el fabricante. Consiste en efectuar
-          reparaciones no programadas a las máquinas, surgidas por fallas
-          imprevistas con motivo de la operación diaria de la misma.
-        </p>
-      </details>
-      <details class="servicios__item">
-        <summary class="servicios__summary gradient gradient">
-          Mantenimiento predictivo
-        </summary>
-        <p class="servicios__text">
-          Si una máquina falla, las repercusiones negativas tanto a nivel
-          servicio como a nivel financiero para una empresa pueden ser enormes.
-          Por ello, ofrecemos este servicio de mantenimiento predictivo que
-          consiste de una serie de acciones y técnicas que se aplican en la
-          maquina para anticiparnos a los posibles errores en un futuro.
-        </p>
-      </details>
-      <details class="servicios__item">
-        <summary class="servicios__summary gradient gradient">
-          Proyectos eléctricos y mecánicos
-        </summary>
-        <p class="servicios__text">
-          Somos especialistas en la realización de proyectos eléctricos y
-          mecánicos en los cuales aplicamos las mejores practicas a seguir en
-          cada etapa del diseño y construcción de la maquinaria para entregarle
-          al cliente una solución a medida de la mejor calidad.
-        </p>
-      </details>
-      <details class="servicios__item">
-        <summary class="servicios__summary gradient">
-          Reparación de máquinas y equipos
-        </summary>
-        <p class="servicios__text">
-          Nos encargamos de la reparación de cualquier daño o error que pueda
-          tener la maquina o equipo a reparar, asi como también asegurarnos de
-          darle un mantenimiento general para prevenir futuras fallas en el
-          mismo.
-        </p>
-      </details>
-      <details class="servicios__item">
-        <summary class="servicios__summary gradient">
-          Fabricación de partes y piezas
-        </summary>
-        <p class="servicios__text">
-          Muchos repuestos para las maquinas suelen tener que ser importados
-          desde el exterior lo que implica un gasto extra para su reparación,
-          por lo que también nos especializamos en la fabricación de los mismos
-          para ofrecerle al cliente el mismo producto incluso con mejoras y en
-          poco tiempo.
-        </p>
-      </details>
-      <details class="servicios__item">
-        <summary class="servicios__summary gradient">
-          TeknoSun se adapta a los nuevos tiempos
-        </summary>
-        <p class="servicios__text">
-          En estos tiempos dificiles por los que estamos pasando actualmente
-          TeknoSun ha evolucionado y encontrado nuevas formas de trabajo
-          cumpliendo con todos los protocolos de seguridad y sanitarios para
-          tener el control de prestar el servicio de un modo seguro y eficaz a
-          su vez.
-        </p>
-      </details>
-    </section>
-    <!-- fin servicio container -->
-    <!-- inicio footer -->
-    <footer class="footer flex-row">
-      <p class="footer__text gradient">copyright</p>
-      <p class="footer__text gradient">Gabriel Ramírez</p>
-    </footer>
-    <!-- fin footer  -->
+    <div class="servicios grid-container">
+      <!-- inicio header -->
+      <header class="header">
+        <!-- inicio nav -->
+        <nav class="nav flex-row">
+          <a class="nav__img-link" href="index.html">
+            <img
+              class="nav__img"
+              src="images/logo_transparentNewColors.png"
+              alt="logo"
+            />
+          </a>
+          <ul class="nav__list flex-row">
+            <li class="nav__item">
+              <a class="nav__item-link gradient" href="index.html">Inicio</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__item-link gradient" href="servicios.html">
+                Servicios
+              </a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__item-link gradient" href="galeria.html">Galeria</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__item-link gradient" href="nosotros.html">
+                Nosotros
+              </a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__item-link gradient" href="contacto.html">
+                Contacto
+              </a>
+            </li>
+          </ul>
+        </nav>
+        <!-- fin nav -->
+      </header>
+      <!-- fin header -->
+      <!-- inicio servicios container -->
+      <section class="servicios__contenido container flex-column">
+        <!-- inicio titulo -->
+        <h1 class="servicios__contenido__title gradient">Servicios</h1>
+        <!-- fin titulo -->
+        <details class="servicios__contenido__item">
+          <summary class="servicios__contenido__summary gradient gradient">
+            Mantención de maquinarias
+          </summary>
+          <p class="servicios__contenido__text">
+            Revisamos periódicamente las máquinas de acuerdo a instrucciones
+            establecidas formalmente por el fabricante. Consiste en efectuar
+            reparaciones no programadas a las máquinas, surgidas por fallas
+            imprevistas con motivo de la operación diaria de la misma.
+          </p>
+        </details>
+        <details class="servicios__contenido__item">
+          <summary class="servicios__contenido__summary gradient gradient">
+            Mantenimiento predictivo
+          </summary>
+          <p class="servicios__contenido__text">
+            Si una máquina falla, las repercusiones negativas tanto a nivel
+            servicio como a nivel financiero para una empresa pueden ser
+            enormes. Por ello, ofrecemos este servicio de mantenimiento
+            predictivo que consiste de una serie de acciones y técnicas que se
+            aplican en la maquina para anticiparnos a los posibles errores en un
+            futuro.
+          </p>
+        </details>
+        <details class="servicios__contenido__item">
+          <summary class="servicios__contenido__summary gradient gradient">
+            Proyectos eléctricos y mecánicos
+          </summary>
+          <p class="servicios__contenido__text">
+            Somos especialistas en la realización de proyectos eléctricos y
+            mecánicos en los cuales aplicamos las mejores practicas a seguir en
+            cada etapa del diseño y construcción de la maquinaria para
+            entregarle al cliente una solución a medida de la mejor calidad.
+          </p>
+        </details>
+        <details class="servicios__contenido__item">
+          <summary class="servicios__contenido__summary gradient">
+            Reparación de máquinas y equipos
+          </summary>
+          <p class="servicios__contenido__text">
+            Nos encargamos de la reparación de cualquier daño o error que pueda
+            tener la maquina o equipo a reparar, asi como también asegurarnos de
+            darle un mantenimiento general para prevenir futuras fallas en el
+            mismo.
+          </p>
+        </details>
+        <details class="servicios__contenido__item">
+          <summary class="servicios__contenido__summary gradient">
+            Fabricación de partes y piezas
+          </summary>
+          <p class="servicios__contenido__text">
+            Muchos repuestos para las maquinas suelen tener que ser importados
+            desde el exterior lo que implica un gasto extra para su reparación,
+            por lo que también nos especializamos en la fabricación de los
+            mismos para ofrecerle al cliente el mismo producto incluso con
+            mejoras y en poco tiempo.
+          </p>
+        </details>
+        <details class="servicios__contenido__item">
+          <summary class="servicios__contenido__summary gradient">
+            TeknoSun se adapta a los nuevos tiempos
+          </summary>
+          <p class="servicios__contenido__text">
+            En estos tiempos dificiles por los que estamos pasando actualmente
+            TeknoSun ha evolucionado y encontrado nuevas formas de trabajo
+            cumpliendo con todos los protocolos de seguridad y sanitarios para
+            tener el control de prestar el servicio de un modo seguro y eficaz a
+            su vez.
+          </p>
+        </details>
+      </section>
+      <!-- fin servicio container -->
+      <!-- inicio footer -->
+      <footer class="footer flex-row">
+        <p class="footer__text gradient">copyright</p>
+        <p class="footer__text gradient">Gabriel Ramírez</p>
+      </footer>
+      <!-- fin footer  -->
+    </div>
   </body>
 </html>
