Media queries and full responsive design

--- a/root/contacto.html
+++ b/root/contacto.html
@@ -66,7 +66,6 @@
             <article class="contacto__article flex-column">
               <div class="contacto__redes">
                 <h3 class="contacto__h3 gradient">Nuestras redes:</h3>
-                <!-- <p class="contacto__text" >Siguenos en nuestras redes para ver a detalle nuestro trabajo</p> -->
                 <div class="contacto__links">
                 <a class="contacto__link" href="https://www.instagram.com/teknosun_spa/"><img class="contacto__icon" src="images/instagram.png" alt="instagram icon" /></a>
                 <a class="contacto__link" href="https://www.facebook.com/teknosun.teknosun"><img class="contacto__icon" src="images/facebook.png" alt="instagram icon" /></a>
@@ -78,17 +77,12 @@
                 <p class="contacto__text" >comercial@teknosun.cl</p>
                 <p class="contacto__text" >+56994340066</p>
               </div>
-              <div class="contacto__map-container">
-                <div class="contacto__gmap">
-                  <iframe class="contacto__map" id="gmap_canvas" src="https://maps.google.com/maps?q=santiago&t=&z=9&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
-                  </iframe>
-                  <a class="contacto__map-link" href="https://123movies-a.com"></a>
-                  <br>
-                  <a class="contacto__map-link" href="https://www.embedgooglemap.net"></a></div>
-              </div>
+              <picture>
+                <img src="images/Map.png" alt="">
+              </picture>
             </article>
           </div>
-      </section>
+        </section>
       <!-- fin sección contacto -->
       <!-- inicio footer -->
       <footer class="footer flex-row">
