contacto__image class and comments in styles.css

--- a/root/index.html
+++ b/root/index.html
@@ -110,7 +110,7 @@
                 <p class="contacto__text" >+56994340066</p>
               </div>
               <picture>
-                <img src="images/Map.png" alt="">
+                <img class="contacto__image" src="images/Map.png" alt="">
               </picture>
             </article>
           </div>
